--- a/app/static/style.css
+++ b/app/static/style.css
@@ -101,9 +101,6 @@ div > h1 {
     margin: 0 auto;
 }
 
-.comentario > h3 {
-    background-color: green;
-}
 
 .perfil-imagens {
     display: grid;
@@ -115,4 +112,16 @@ div > h1 {
     text-align: center;
 }
 
+/* video responsivo */
+.embed {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.65%;
+}
 
+.embed iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
