--- a/app/templates/autenticacao/login.html
+++ b/app/templates/autenticacao/login.html
@@ -12,6 +12,7 @@
 <div class="page-header">
     <h1>Entrar</h1>     
 </div>
+<div></div>
 
 <div class="col-md-4" align = "auto">
     {{ wtf.quick_form(form) }}
