--- a/app/templates/perfil_administrador.html
+++ b/app/templates/perfil_administrador.html
@@ -25,8 +25,7 @@
     <div class="alinhamento">
         <div class="forms">
 
-            <formlegend>
-                <>Editar Perfil Administrador</legend>
+            <formlegend>Editar Perfil Administrador</legend>
                 <div class="form-group">
                     {{ administrador.name.label }}
                     {{ administrador.name(class="form-control") }}
