e se deixarmos assim

--- a/app/templates/relatorio_resultado.html
+++ b/app/templates/relatorio_resultado.html
@@ -4,6 +4,35 @@
 
 
 {% block page_content %}
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  
+        <form action="/resultado" method="POST" class="navbar-form navbar-left">
+  
+          <select name="tipo">
+            <option value="aluno">Aluno</option>
+            <option value="instrutor">Instrutor</option>
+          </select>
+  
+          <select name="filtro">
+            <option value="nome">Nome</option>
+            <option value="instrumento">Instrumento</option>
+            <option value="cidade">Cidade</option>
+          </select>
+  
+          
+  
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav nav-pills navbar-right total-relatorio" role="tablist">
+          <li role="presentation" class="active"><a href="#">Total <span class="badge">42</span></a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
     
 <table class="table">
     <thead>
@@ -12,18 +41,22 @@
         <th scope="col">id</th>
         <th scope="col">Nome</th>
         <th scope="col">e-mail</th>
+        <th scope="col">Instrumento</th>
         <th scope="col">Perfil</th>
+        <th scope="col">Cidade</th>
       </tr>
     </thead>
     <tbody>
   
-      {% for _tipoUsuario in _tipoUsuario %}        
+      {% for _filtro in _filtro %}
       <tr>
-        <th scope="row"> {{ _tipoUsuario.id }}</th>
-        <td>{{ _tipoUsuario.id }}</td>
-        <td>{{ _tipoUsuario.nome }}</td>
-        <td>{{ _tipoUsuario.email }}</td>
-        <td>{{ _tipoUsuario.username }}</td>
+        <th scope="row"> {{ _filtro.id }}</th>
+        <td>{{ _filtro.id }}</td>
+        <td>{{ _filtro.nome }}</td>
+        <td>{{ _filtro.email }}</td>
+        <td>{{ _filtro.instrumento }}</td>
+        <td>{{ _filtro.username }}</td>
+        <td>{{ _filtro.cidade }}</td>
       </tr>
       {% endfor %}
             
