--- a/app/templates/relatorio.html
+++ b/app/templates/relatorio.html
@@ -22,17 +22,25 @@
           <option value="cidade">Cidade</option>
         </select>
 
-        <input type="search" name="busca">
+        
 
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav nav-pills navbar-right total-relatorio" role="tablist">
-        <li role="presentation" class="active"><a href="#">Total <span class="badge">42</span></a></li>
-      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-
-</div>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">id</th>
+      <th scope="col">Nome</th>
+      <th scope="col">e-mail</th>
+      <th scope="col">Instrumento</th>
+      <th scope="col">Perfil</th>
+    </tr>
+  </thead>
+  <tbody>
+  </table>
 {% endblock %}
