--- a/app/templates/relatorio.html
+++ b/app/templates/relatorio.html
@@ -4,43 +4,54 @@
 
 
 {% block page_content %}
+
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-      <form action="/resultado" method="POST" class="navbar-form navbar-left">
-
-        <select name="tipo">
-          <option value="aluno">Aluno</option>
-          <option value="instrutor">Instrutor</option>
-        </select>
-
-        <select name="filtro">
-          <option value="nome">Nome</option>
-          <option value="instrumento">Instrumento</option>
-          <option value="cidade">Cidade</option>
-        </select>
-
-        
-
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
+    <div class="container-fluid">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  
+        <form action="#" method="POST" class="navbar-form navbar-left">
+            
+          {{ form.filtro }}
+          {{ form.tipo_usuario }}
+          {{ form.busca }}
+  
+  
+  
+          <button type="submit" class="btn btn-default">Pesquisar</button>
+        </form>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+    
 <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">id</th>
-      <th scope="col">Nome</th>
-      <th scope="col">e-mail</th>
-      <th scope="col">Instrumento</th>
-      <th scope="col">Perfil</th>
-    </tr>
-  </thead>
-  <tbody>
+    <thead>
+      <tr>
+        <th scope="col">id</th>
+        <th scope="col">Nome</th>
+        <th scope="col">e-mail</th>
+        <th scope="col">Instrumento</th>
+        <th scope="col">Perfil</th>
+        <th scope="col">Cidade</th>
+        <th scope="col">Tipo Usuario</th>
+      </tr>
+    </thead>
+    <tbody>
+  
+      {% for usuario in usuarios %}
+      <tr>
+        <th scope="row"> {{ usuario.id }}</th>
+        <td>{{ usuario.id }}</td>
+        <td>{{ usuario.nome }}</td>
+        <td>{{ usuario.email }}</td>
+        <td>{{ usuario.instrumento }}</td>
+        <td>{{ usuario.username }}</td>
+        <td>{{ usuario.cidade }}</td>
+        <td>{{ usuario.tipoUsuario }}</td>
+      </tr>
+      {% endfor %}
+            
+    </tbody>
   </table>
+
 {% endblock %}
