ja disse que nao sei mais

--- a/app/templates/autenticacao/login.html
+++ b/app/templates/autenticacao/login.html
@@ -6,7 +6,7 @@
 {% block page_content %}
 
 <div class="col-sm-8 mb-2" align = "center"><!--sm espaço ocupado na extremidade da tela-->
-    <br><br><a href=""><img src="../static/images/login3.png" width="390px"></a>
+    <a href='https://svgshare.com/s/MCD' ><img src='https://svgshare.com/i/MCD.svg' title='login' /></a>
 </div>
 
 <div class="page-header">
