--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
         <h2>Seja bem vindo ao ldMusic, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}sinta-se a vontade{% endif %}!</h2>
 
         
-                   <br><br> <img class="card-img-top" src="../static/images/imagem1.jpeg" whidth = "200px"> <!--Adicionando imagen a página-->
+                   <br><br> <img class="card-img-top" src="../static/compose.svg" width="400px"> <!--Adicionando imagen a página-->
                     
             
         </div>
